[package]
name = "esp-inputs"
version = "0.1.0"
authors = ["Ben Naylor <nayben@gmail.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
smart-leds-trait = { version = "*" }
smart-leds = { version = "0.4.0" }
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
heapless = { version = "0.7.8" }
